--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "validator": "^12.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
